--- a/css/styling.css
+++ b/css/styling.css
@@ -69,10 +69,19 @@ nav {
   display: flex;
   align-items: center;
   border-top: white 1px solid;
-  border-bottom: white 1px solid;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+footer {
   background-color: #525252;
+  height: 100%;
+}
+
+footer h6 {
+  color: white;
+  margin-left: 10px;
+  margin-bottom: 0;
 }
 
 /* SPONSORED TEAMS end  */
