--- a/css/styling.css
+++ b/css/styling.css
@@ -49,7 +49,7 @@ nav {
 
 /* carousel end  */
 
-/* SPONSORED TEAMS start  */
+/* footer start  */
 
 .sponsored h1 {
   color: white;
@@ -86,7 +86,12 @@ footer h6 {
   margin-bottom: 0;
 }
 
-/* SPONSORED TEAMS end  */
+.rights {
+  padding-bottom: 15px;
+  padding-left: 15px;
+}
+
+/* footer end  */
 
 /* products start  */
 
@@ -141,6 +146,7 @@ footer h6 {
 
 .product-img {
   width: 90%;
+  /* height: 550px; */
   margin-bottom: 10px;
   margin-top: 10px;
   margin-left: 10px;
@@ -148,6 +154,8 @@ footer h6 {
 
 .product {
   display: flex;
+  margin-top: 35px;
+  margin-bottom: 35px;
 }
 
 .product-info {
