--- a/css/styling.css
+++ b/css/styling.css
@@ -185,15 +185,16 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 50px;
 }
 
-.message {
-  display: flex;
+.col-form-label {
+  color: white;
+  margin: 15px;
 }
 
-#error {
-  text-align: center;
-  color: red;
+#passwordHelpInline {
+  color: white;
 }
 
 /* form end  */
